# cubesat

C3SAT-OBC/: .gitignore  CMakeLists.txt  README.md  modem_integracio_szakdolgozati_leiras.md  partitions.csv  sdkconfig.defaults
C3SAT-OBC/components/bsp/: CMakeLists.txt  bsp.c  idf_component.yml
C3SAT-OBC/components/bsp/include/: bsp.h  bsp_pins.h
C3SAT-OBC/components/drivers/: CMakeLists.txt  bme280.c  ds3231.c  ili9341.c  ina219.c  mpu6050.c  touch.c
C3SAT-OBC/components/drivers/include/: bme280.h  ds3231.h  ili9341.h  ina219.h  mpu6050.h  touch.h
C3SAT-OBC/components/hal/: hal_i2c.c
C3SAT-OBC/components/hal/include/: hal_spi.h
C3SAT-OBC/components/obc_common/: CMakeLists.txt  obc_errors.c
C3SAT-OBC/components/obc_common/include/: obc_config.h  obc_errors.h  obc_types.h
C3SAT-OBC/components/obc_hal/: CMakeLists.txt  hal_spi.c
C3SAT-OBC/components/obc_hal/include/: hal_i2c.h
C3SAT-OBC/components/services/: CMakeLists.txt  clock_svc.c  fdir.c  mode_manager.c  obc_state.c  storage.c  telecommand.c  telemetry.c
C3SAT-OBC/components/services/include/: clock_svc.h  fdir.h  mode_manager.h  obc_state.h  storage.h  telecommand.h  telemetry.h
C3SAT-OBC/components/services/test/: CMakeLists.txt  test_telecommand.c
C3SAT-OBC/components/subsystems/: CMakeLists.txt  adcs.c  cdh.c  eps.c  thermal.c
C3SAT-OBC/components/subsystems/include/: subsystems.h
C3SAT-OBC/components/ui/: CMakeLists.txt  gfx.c  gui.c
C3SAT-OBC/docs/: HARDWARE_HU.md
C3SAT-OBC/main/: CMakeLists.txt  app_main.c
C3SAT-OBC/tools/: HARDWARE_HU.md  groundstation.py
(+3 files in other folders)
